# gitko

./: .gitignore  Cargo.toml  LICENSE  README.MD
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/: ascii_table.rs  lib.rs  num.rs
crossterm/: Cargo.toml
crossterm/src/: lib.rs
ncurses_render/: Cargo.toml
ncurses_render/src/: lib.rs
render/: Cargo.toml
render/src/: lib.rs
src/: ascii_table.rs  git.rs  main.rs  num.rs  render.rs  searchable.rs
src/git/: commands.rs  mod.rs
src/gitko/: branch_window.rs  command_window.rs  commit_diff_window.rs  commit_options_window.rs  detailed_commit_window.rs  diff_display.rs  diff_window.rs  input_window.rs  log_window.rs  main_window.rs  mod.rs  output_window.rs  prompt_window.rs  push_options_window.rs  text_window.rs
src/render/: ascii_table.rs  color.rs  commit_window.rs  diff_window.rs  display.rs  log_window.rs  main_window.rs  mod.rs  renderer.rs  window.rs  window2.rs  writeable_display.rs
