[package]
name = "gitko"
version = "0.1.0"
authors = ["Emanuel Skrenkovic <eskrenkovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crossterm"]
crossterm = ["dep:gitko_crossterm"]
ncurses = ["dep:gitko_ncurses_render"]

[dependencies]
gitko_common = { path = "./common" }
gitko_render = { path = "./render" }
gitko_crossterm = { path = "./crossterm", optional = true }
gitko_ncurses_render = { path = "./ncurses_render", optional = true }
